--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,20 @@
     <meta name="description" content="Daniele Quintiliani's portfolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-XQ19MMLN5R"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-XQ19MMLN5R");
+    </script>
   </head>
   <body>
     <app-root></app-root>
