added og:image for preview in social link

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>DANIELE QUINTILIANI</title>
@@ -7,6 +7,10 @@
     <meta name="description" content="Daniele Quintiliani's portfolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta
+      content="https://d33wubrfki0l68.cloudfront.net/66ccae2c454f8b0008d70cee/screenshot_2024-08-26-16-34-28-0000.webp"
+      property="og:image"
+    />
     <!-- Google tag (gtag.js) -->
     <script
       async
